Listar transacciones por nodo y escribir a archivo de productos cada vez que ocurre una transaccion